--- a/styles5.css
+++ b/styles5.css
@@ -30,10 +30,10 @@ h2 {
     margin: 0;
     padding-left: 20px;
 }
- ul {
+ /* ul {
     margin: 0 0 10px;
     padding: 0;
-}
+} */
 
  li {
     font-size: 16px;
